Add copy to clipboard functionality and update UI elements

--- a/index.html
+++ b/index.html
@@ -64,12 +64,13 @@
             </div>
           </details>
           <button id="processBtn">Process Image</button>
+          <button id="copyBtn" disabled>Copy to Clipboard</button>
           <button id="downloadBtn" disabled>Download Image</button>
         </div>
         <div>
           <h2>Original Image</h2>
           <div id="imagePreview" class="image-preview">
-            <p id="dropText">No image uploaded</p>
+            <p id="dropText">No image uploaded (paste or drop here)</p>
             <img id="previewImage" style="display: none" alt="Image preview" />
           </div>
         </div>
